# optionpilot

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
docs/: INSTALL.md  architecture.md  deploy_cloudflare.md  deploy_hermes.md  deploy_mac.md  hermes_setup_prompt.md  strategy_research.md  thetadata_setup.md
optionpilot/: __init__.py  analysis.py  cli.py  config.py  crypto.py  fundamentals.py  plots.py  progress.py  screener.py  sentiment.py
optionpilot/agent/: __init__.py  approval.py  context.py  doom_loop.py  lang.py  loop.py  memory.py  planner.py  playbook.py  profiles.py  router.py  trajectory.py
optionpilot/backtest/: __init__.py  engine.py  grid.py  metrics.py  strategies.py  walkforward.py
optionpilot/data/: __init__.py  binance.py  databento_fetcher.py  greeks.py  market.py  osi.py  sources.py
optionpilot/integrations/: __init__.py  mcp_server.py
optionpilot/llm/: __init__.py  client.py
optionpilot/models/: __init__.py  baseline.py  nudge.py
optionpilot/ui/: app.py  (+1 more)
scripts/: serve_local.sh  setup_mac.sh  setup_vllm.sh
tests/: test_analysis.py  test_crypto.py  test_databento_fetcher.py  test_diagnostics.py  test_fundamentals.py  test_grid.py  test_lang.py  test_loop.py  test_mcp_server.py  test_memory.py  test_options.py  test_perp_regime.py  test_planner.py  test_plot_fonts.py  test_plots.py  test_profiles.py  test_progress.py  test_screener.py  test_sentiment.py  test_smoke.py  test_thetadata.py  test_thetadata_cache.py  test_tracking.py  test_trajectory.py  test_ui.py  test_ui_auth.py  test_ui_persist.py  test_walkforward.py
(+27 files in other folders)
