[project]
name = "optionpilot"
version = "0.0.1"
description = "Autonomous options-strategy research agent — an ML intern for options, validated by rigorous backtesting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "litellm>=1.40",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "duckdb>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "scipy>=1.13",
    "rich>=13.7",
]

[project.optional-dependencies]
data = [
    "databento>=0.34",
    "yfinance>=0.2.40",
]
models = [
    "xgboost>=2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
optionpilot = "optionpilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["optionpilot"]

[tool.ruff]
line-length = 100
target-version = "py311"
